added contact information

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="about-me">
             
             <h2>About Me</h2>
-            <div class="section-info"><p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. Sophie's creative appetite is fueled by the great joy it brings and her belief good design begins with accessibility.
+            <div class="section-info"><p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. </p><p>Her creative appetite is fueled by the great joy it brings and the belief that good design begins with accessibility.
             </p></div>
         </section>
         <section id="my-work" class="my-work">
