added css to nav

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Sophie Homer</h1>
         <nav>
-                    <a href="#about-me">About Me</a>
+                    <a href="#about-me">About</a>
 
                     <a href="#my-work">My Work</a>
                 
@@ -21,7 +21,7 @@
     <main class="content">
         <section class="about-me">
             
-            <h2>About Me</h2>
+            <h2>About</h2>
             <div class="section-info"><p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. </p><p>Her creative appetite is fueled by the great joy it brings and the belief that good design begins with accessibility.
             </p></div>
         </section>
