updated about me

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <h2>About</h2>
             <div class="section-info">
                 <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. </p><br>
-                <p>Her creative appetite is fueled by the great joy it brings and the belief that good design begins with accessibility.</p>
+                <p>Her creative appetite is fueled by believing <em>good design begins with accessibility</em>.
+                  Sophie was born and raised in Los Angeles, California. 
+                  She worked in costumes for television and film for nearly ten years before pursing her dreams in web development.
+                </p>
             </div>
     </section>
     <section id="my-work" class="my-work">
