added more css comentary

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <title>My Portfolio</title>
 </head>
 <body>
+    <!-- Navigation -->
   <header>
     <h1>Sophie Homer</h1>
       <nav>
+          <!-- Anchor Element -->
          <a href="#about-me">About</a>
          <a href="#my-work">My Work</a> 
          <a href="#contact">Contact</a>
       </nav>
     </header>
     <main class="content">
+    <!-- "About Me" Section -->
     <section class="about-me">
         <h2>About</h2>
             <div class="section-info">
@@ -26,10 +29,12 @@
                 </p>
             </div>
     </section>
+    <!-- "My Work" Section -->
     <section id="my-work" class="my-work">
         <h2>My Work</h2>
             <div class="section-info"></div>
     </section>
+    <!-- "Contact" Section -->
     <section id="contact" class="contact">
         <h2>Contact</h2>
             <div class="section-info">
@@ -40,7 +45,7 @@
             </div>
         </section>
     </main>
-    
+    <!-- Footer -->
     <footer class="footer">
         <h4>Made with ❤️️ by Sophie Homer</h4>
     </footer>
