added horiseon photo

--- a/index.html
+++ b/index.html
@@ -2,46 +2,55 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="./style.css">
-  <title>My Portfolio</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./style.css">
+    <title>My Portfolio</title>
 </head>
+
 <body>
     <!-- Navigation -->
-  <header>
-    <h1>Sophie Homer</h1>
-      <nav>
-          <!-- Anchor Element -->
-         <a href="#about-me">About</a>
-         <a href="#my-work">My Work</a> 
-         <a href="#contact">Contact</a>
-      </nav>
+    <header>
+        <h1>Sophie Homer</h1>
+        <nav>
+            <!-- Anchor Element -->
+            <a href="#about-me">About Me</a>
+            <a href="#my-work">My Work</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
     <main class="content">
-    <!-- "About Me" Section -->
-    <section class="about-me">
-        <h2>About</h2>
+        <!-- "About Me" Section -->
+        <section class="about-me">
+            <h2>About Me</h2>
             <div class="section-info">
-                <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. </p><br>
-                <p>Her creative appetite is fueled by believing <em>good design begins with accessibility</em>.
-                  Sophie was born and raised in Los Angeles, California. 
-                  She worked in costumes for television and film for nearly ten years before pursing her dreams in web development.
+                <img alt="Sophie Homer" src="images/portfolio temp picture.jpg">
+                <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional,
+                    design.
+                    Her creative appetite is fueled by believing <em>good design begins with accessibility</em>.
+                    Sophie was born and raised in Los Angeles, California.
+                    She worked in costumes for television and film for nearly ten years before pursing her dreams in web
+                    development.
                 </p>
             </div>
-    </section>
-    <!-- "My Work" Section -->
-    <section id="my-work" class="my-work">
-        <h2>My Work</h2>
-            <div class="section-info"></div>
-    </section>
-    <!-- "Contact" Section -->
-    <section id="contact" class="contact">
-        <h2>Contact</h2>
+        </section>
+        <!-- "My Work" Section -->
+        <section id="my-work" class="my-work">
+            <h2>My Work</h2>
+            <div></div>
+            <div class="image-container">
+                <a class="horiseon">
+                    <div></div>
+                </a>
+            </div>
+        </section>
+        <!-- "Contact" Section -->
+        <section id="contact" class="contact">
+            <h2>Contact</h2>
             <div class="section-info">
                 <a href="mailto:sophiehomer94@gmail.com">sophiehomer94@gmail.com
                     <br>949.981.7090
                 </a>
-                
+
             </div>
         </section>
     </main>
