--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="about-me">
             <h2>About Me</h2>
             <div class="section-info">
-                <img alt="Sophie Homer" src="images/portfolio temp picture.jpg">
+                <img alt="Sophie Homer" src="images/about-me-photo.jpg">
                 <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional,
                     design.
                     Her creative appetite is fueled by believing <em>good design begins with accessibility</em>.
@@ -38,7 +38,7 @@
             <h2>My Work</h2>
             <div></div>
             <div class="image-container">
-                <a class="horiseon">
+                <a class="run-buddy">
                     <div></div>
                 </a>
             </div>
