added link and styles to runbuddy

--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
         <!-- "My Work" Section -->
         <section id="my-work" class="my-work">
             <h2>My Work</h2>
-            <div></div>
-            <div class="image-container">
-                <a class="run-buddy">
-                    <div></div>
+            <div class="container">
+                <a href="https://sophiehomer.github.io/run-buddy/" class="run-buddy-img">
+                    <div class="text-block">
+                    <h2>Run Buddy</h2>
+                    </div>    
                 </a>
             </div>
+            
         </section>
         <!-- "Contact" Section -->
         <section id="contact" class="contact">
             <h2>Contact</h2>
             <div class="section-info">
-                <a href="mailto:sophiehomer94@gmail.com">sophiehomer94@gmail.com
-                    <br>949.981.7090
-                </a>
+                <a href="mailto:sophiehomer94@gmail.com">sophiehomer94@gmail.com</a>
+                    <a href="tel:949-981-7090">949-981-7090</a>
 
             </div>
         </section>
