added horiseon image and website url

--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
                     </div>    
                 </a>
             </div>
-            
+            <div class="container">
+                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img">
+                    <div class="text-block">
+                    <h2>Horiseon</h2>
+                    </div>
+
+                </a>
+
+
+            </div>
         </section>
         <!-- "Contact" Section -->
         <section id="contact" class="contact">
