media queries for phone

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main class="content">
         <!-- "About Me" Section -->
-        <section class="about-me">
+        <section class="about-me" id="about-me">
             <h2>About Me</h2>
             <div class="section-info">
                 <img alt="Sophie Homer" src="images/about-me-photo.jpg">
@@ -37,22 +37,34 @@
         <section id="my-work" class="my-work">
             <h2>My Work</h2>
             <div class="container">
-                <a href="https://sophiehomer.github.io/run-buddy/" class="run-buddy-img">
+                <a href="https://sophiehomer.github.io/run-buddy/" class="run-buddy-img container-img">
                     <div class="text-block">
                     <h2>Run Buddy</h2>
                     </div>    
                 </a>
-            </div>
-            <div class="container">
-                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img">
+                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
                     <div class="text-block">
                     <h2>Horiseon</h2>
                     </div>
-
                 </a>
-
-
+                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
+                    <div class="text-block">
+                    <h2>Horiseon</h2>
+                    </div>
+                </a>
+                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
+                    <div class="text-block">
+                    <h2>Horiseon</h2>
+                    </div>
+                </a>
+                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
+                    <div class="text-block">
+                    <h2>Horiseon</h2>
+                    </div>
+                </a>
             </div>
+            
+               
         </section>
         <!-- "Contact" Section -->
         <section id="contact" class="contact">
