updated my work section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./style.css">
     <title>My Portfolio</title>
@@ -24,12 +25,8 @@
             <h2>About Me</h2>
             <div class="section-info">
                 <img alt="Sophie Homer" src="images/about-me-photo.jpg">
-                <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional,
-                    design.
-                    Her creative appetite is fueled by believing <em>good design begins with accessibility</em>.
-                    Sophie was born and raised in Los Angeles, California.
-                    She worked in costumes for television and film for nearly ten years before pursing her dreams in web
-                    development.
+                <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. Her creative appetite is fueled by believing <em>good design begins with accessibility</em>. Sophie was born and raised in Los Angeles,
+                    California. She worked in costumes for television and film for nearly ten years before pursing her dreams in web development.
                 </p>
             </div>
         </section>
@@ -39,45 +36,45 @@
             <div class="container">
                 <a href="https://sophiehomer.github.io/run-buddy/" class="run-buddy-img container-img">
                     <div class="text-block">
-                    <h2>Run Buddy</h2>
-                    </div>    
-                </a>
-                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
-                    <div class="text-block">
-                    <h2>Horiseon</h2>
+                        <h2>Run Buddy</h2>
                     </div>
                 </a>
                 <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
                     <div class="text-block">
-                    <h2>Horiseon</h2>
+                        <h2>Horiseon</h2>
                     </div>
                 </a>
-                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
-                    <div class="text-block">
-                    <h2>Horiseon</h2>
+                <a href="https://www.bonappetit.com/" class="bon-appetit-img container-img">
+                    <div class="text-block ">
+                        <h2>Bon Apetit</h2>
                     </div>
                 </a>
-                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
-                    <div class="text-block">
-                    <h2>Horiseon</h2>
+                <a href="https://www.aerial.is/" class="aerial-img container-img">
+                    <div class="text-block ">
+                        <h2>Aerial</h2>
+                    </div>
+                </a>
+                <a href="https://www.stromamedical.com/" class="stroma-img container-img">
+                    <div class="text-block ">
+                        <h2>Stroma</h2>
                     </div>
                 </a>
             </div>
-            
-               
+
+
         </section>
-        <!-- "Contact" Section -->
-        <section id="contact" class="contact">
+        <!-- "Contact " Section -->
+        <section id="contact " class="contact">
             <h2>Contact</h2>
-            <div class="section-info">
-                <a href="mailto:sophiehomer94@gmail.com">sophiehomer94@gmail.com</a>
-                    <a href="tel:949-981-7090">949-981-7090</a>
+            <div class="section-info ">
+                <a href="mailto:sophiehomer94@gmail.com ">sophiehomer94@gmail.com</a>
+                <a href="tel:949-981-7090 ">949-981-7090</a>
 
             </div>
         </section>
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer ">
         <h4>Made with ❤️️ by Sophie Homer</h4>
     </footer>
 </body>
