--- a/index.html
+++ b/index.html
@@ -34,9 +34,25 @@
         <section id="my-work" class="my-work">
             <h2>My Work</h2>
             <div class="container">
+                
                 <a href="https://sophiehomer.github.io/run-buddy/" class="run-buddy-img container-img">
                     <div class="text-block">
                         <h3>Run Buddy</h3>
+                    </div>
+                </a>
+                <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
+                    <div class="text-block ">
+                        <h3>Recipes</h3>
+                    </div>
+                </a>
+                <a href="https://sophiehomer.github.io/Weather-Dashboard/" class="weather-dashboard-img container-img">
+                    <div class="text-block ">
+                        <h3>Weather Dashboard</h3>
+                    </div>
+                </a>
+                <a href="https://sophiehomer.github.io/work-day-scheduler/" class="work-day-scheduler-img container-img">
+                    <div class="text-block ">
+                        <h3>Work Day Scheduler</h3>
                     </div>
                 </a>
                 <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
@@ -44,27 +60,12 @@
                         <h3>Horiseon</h3>
                     </div>
                 </a>
-                <a href="https://www.bonappetit.com/" class="bon-appetit-img container-img">
-                    <div class="text-block ">
-                        <h3>Bon Apetit</h3>
-                    </div>
-                </a>
-                <a href="https://www.aerial.is/" class="aerial-img container-img">
-                    <div class="text-block ">
-                        <h3>Aerial</h3>
-                    </div>
-                </a>
-                <a href="https://www.stromamedical.com/" class="stroma-img container-img">
-                    <div class="text-block ">
-                        <h3>Stroma</h3>
-                    </div>
-                </a>
             </div>
 
 
         </section>
         <!-- "Contact " Section -->
-        <section id="contact " class="contact">
+        <section id="contact" class="contact">
             <h4>Contact</h4>
             <div class="section-info ">
                 <a href="mailto:sophiehomer94@gmail.com ">sophiehomer94@gmail.com</a>
