--- a/index.html
+++ b/index.html
@@ -34,18 +34,17 @@
         <section id="my-work" class="my-work">
             <h2>My Work</h2>
             <div class="container">
-                
+                <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
+                    <div class="text-block ">
+                        <h3>Dinner & Drinks</h3>
+                    </div>
+                </a>
                 <a href="https://sophiehomer.github.io/run-buddy/" class="run-buddy-img container-img">
                     <div class="text-block">
                         <h3>Run Buddy</h3>
                     </div>
                 </a>
-                <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
-                    <div class="text-block ">
-                        <h3>Recipes</h3>
-                    </div>
-                </a>
-                <a href="https://sophiehomer.github.io/Weather-Dashboard/" class="weather-dashboard-img container-img">
+                 <a href="https://sophiehomer.github.io/Weather-Dashboard/" class="weather-dashboard-img container-img">
                     <div class="text-block ">
                         <h3>Weather Dashboard</h3>
                     </div>
