--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=PT+Sans&family=Raleway:wght@100&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>My Portfolio</title>
 </head>
@@ -11,18 +15,18 @@
 <body>
     <!-- Navigation -->
     <header>
-        <h1>Sophie Homer</h1>
+        <h1>SOPHIE HOMER</h1>
         <nav>
             <!-- Anchor Element -->
-            <a href="#about-me">About Me</a>
-            <a href="#my-work">My Work</a>
-            <a href="#contact">Contact</a>
+            <a href="#about-me">ABOUT ME</a>
+            <a href="#my-work">MY WORK</a>
+            <a href="#contact">CONTACT</a>
         </nav>
     </header>
     <main class="content">
         <!-- "About Me" Section -->
         <section class="about-me" id="about-me">
-            <h2>About Me</h2>
+            <h2>ABOUT ME</h2>
             <div class="section-info">
                 <img alt="Sophie Homer" src="images/about-me-photo.jpg">
                 <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. Her creative appetite is fueled by believing <em>good design begins with accessibility</em>. Sophie was born and raised in Los Angeles,
@@ -32,31 +36,31 @@
         </section>
         <!-- "My Work" Section -->
         <section id="my-work" class="my-work">
-            <h2>My Work</h2>
+            <h2>MY WORK</h2>
             <div class="container">
                 <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
                     <div class="text-block ">
-                        <h3>Dinner & Drinks</h3>
+                        <h3>DINNER & DRINKS</h3>
                     </div>
                 </a>
                 <a href="https://sophiehomer.github.io/run-buddy/" class="run-buddy-img container-img">
                     <div class="text-block">
-                        <h3>Run Buddy</h3>
+                        <h3>RUN BUDDY</h3>
                     </div>
                 </a>
                  <a href="https://sophiehomer.github.io/Weather-Dashboard/" class="weather-dashboard-img container-img">
                     <div class="text-block ">
-                        <h3>Weather Dashboard</h3>
+                        <h3>WEATHER DASHBOARD</h3>
                     </div>
                 </a>
                 <a href="https://sophiehomer.github.io/work-day-scheduler/" class="work-day-scheduler-img container-img">
                     <div class="text-block ">
-                        <h3>Work Day Scheduler</h3>
+                        <h3>WORK DAY SCHEDULER</h3>
                     </div>
                 </a>
                 <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
                     <div class="text-block">
-                        <h3>Horiseon</h3>
+                        <h3>HORISEON</h3>
                     </div>
                 </a>
             </div>
@@ -65,7 +69,7 @@
         </section>
         <!-- "Contact " Section -->
         <section id="contact" class="contact">
-            <h4>Contact</h4>
+            <h4>CONTACT</h4>
             <div class="section-info ">
                 <a href="mailto:sophiehomer94@gmail.com ">sophiehomer94@gmail.com</a>
                 <a href="tel:949-981-7090 ">949-981-7090</a>
@@ -75,7 +79,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer ">
-        <h5>Made with ❤️️ by Sophie Homer</h5>
+        <h5>&COPY;SOPHIE HOMER</h5>
     </footer>
 </body>
 
