--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=PT+Sans&family=Raleway:wght@100&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./style.css">
     <title>My Portfolio</title>
 </head>
@@ -18,16 +20,16 @@
         <h1>SOPHIE HOMER</h1>
         <nav>
             <!-- Anchor Element -->
-            <a href="#about-me">ABOUT ME</a>
-            <a href="#my-work">MY WORK</a>
+            <a href="#about-me">ABOUT</a>
+            <a href="#my-work">WORK</a>
             <a href="#contact">CONTACT</a>
         </nav>
     </header>
     <main class="content">
         <!-- "About Me" Section -->
         <section class="about-me" id="about-me">
-            <h2>ABOUT ME</h2>
-            <div class="section-info">
+            <h2>ABOUT</h2>
+            <div class="section-info is-mobile">
                 <img alt="Sophie Homer" src="images/about-me-photo.jpg">
                 <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. Her creative appetite is fueled by believing <em>good design begins with accessibility</em>. Sophie was born and raised in Los Angeles,
                     California. She worked in costumes for television and film for nearly ten years before pursing her dreams in web development.
@@ -36,7 +38,7 @@
         </section>
         <!-- "My Work" Section -->
         <section id="my-work" class="my-work">
-            <h2>MY WORK</h2>
+            <h2>WORK</h2>
             <div class="container">
                 <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
                     <div class="text-block ">
@@ -70,7 +72,7 @@
         <!-- "Contact " Section -->
         <section id="contact" class="contact">
             <h4>CONTACT</h4>
-            <div class="section-info ">
+            <div class="section-info is-mobile">
                 <a href="mailto:sophiehomer94@gmail.com ">sophiehomer94@gmail.com</a>
                 <a href="tel:949-981-7090 ">949-981-7090</a>
 
