--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=PT+Sans&family=Raleway:wght@100&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
+    
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+
+
     <link rel="stylesheet" href="./style.css">
     <title>My Portfolio</title>
 </head>
@@ -38,7 +40,7 @@
         </section>
         <!-- "My Work" Section -->
         <section id="my-work" class="my-work">
-            <h2>WORK</h2>
+            <h2>MY WORK</h2>
             <div class="container">
                 <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
                     <div class="text-block ">
