--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main class="content">
         <!-- "About Me" Section -->
-        <section class="about-me" id="about-me">
+        <section class="about-me">
             <h2>ABOUT</h2>
             <div class="section-info is-mobile">
                 <img alt="Sophie Homer" src="images/about-me-photo.jpg">
@@ -39,7 +39,7 @@
             </div>
         </section>
         <!-- "My Work" Section -->
-        <section id="my-work" class="my-work">
+        <section class="my-work">
             <h2>MY WORK</h2>
             <div class="container">
                 <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
@@ -72,7 +72,7 @@
 
         </section>
         <!-- "Contact " Section -->
-        <section id="contact" class="contact">
+        <section class="contact">
             <h4>CONTACT</h4>
             <div class="section-info is-mobile">
                 <a href="mailto:sophiehomer94@gmail.com ">sophiehomer94@gmail.com</a>
