--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </header>
     <main class="content">
         <!-- "About Me" Section -->
-        <section class="about-me">
+        <section class="about-me" id="about-me">
             <h2>ABOUT</h2>
-            <div class="section-info is-mobile">
+            <div class="section-info">
                 <img alt="Sophie Homer" src="images/about-me-photo.jpg">
                 <p> Sophie Homer is a multidisciplinary creative. She's always had a keen eye for clean, functional, design. Her creative appetite is fueled by believing <em>good design begins with accessibility</em>. Sophie was born and raised in Los Angeles,
                     California. She worked in costumes for television and film for nearly ten years before pursing her dreams in web development.
@@ -39,7 +39,7 @@
             </div>
         </section>
         <!-- "My Work" Section -->
-        <section class="my-work">
+        <section class="my-work" id= "my-work">
             <h2>MY WORK</h2>
             <div class="container">
                 <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
@@ -72,9 +72,9 @@
 
         </section>
         <!-- "Contact " Section -->
-        <section class="contact">
+        <section class="contact" id="contact">
             <h4>CONTACT</h4>
-            <div class="section-info is-mobile">
+            <div class="section-info">
                 <a href="mailto:sophiehomer94@gmail.com ">sophiehomer94@gmail.com</a>
                 <a href="tel:949-981-7090 ">949-981-7090</a>
 
@@ -82,7 +82,7 @@
         </section>
     </main>
     <!-- Footer -->
-    <footer class="footer ">
+    <footer class="footer">
         <h5>&COPY;SOPHIE HOMER</h5>
     </footer>
 </body>
