added kit to work section

--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
         <section class="my-work" id= "my-work">
             <h2>MY WORK</h2>
             <div class="container">
+                <a href="https://blooming-anchorage-21473.herokuapp.com/" class="kit-img container-img">
+                    <div class="text-block">
+                        <h3>KIT</h3>
+                    </div>
+                </a>
                 <a href="https://abarragan89.github.io/dinner-drinks/" class="dinner-drinks-img container-img">
-                    <div class="text-block ">
+                    <div class="text-block">
                         <h3>DINNER & DRINKS</h3>
                     </div>
                 </a>
