--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <section class="my-work" id= "my-work">
             <h2>MY WORK</h2>
             <div class="container">
+                <a href="https://draw-the-line-repo.herokuapp.com/" class="draw-the-line-img container-img">
+                    <div class="text-block">
+                        <h3>DRAW THE LINE</h3>
+                    </div>
                 <a href="https://blooming-anchorage-21473.herokuapp.com/" class="kit-img container-img">
                     <div class="text-block">
                         <h3>KIT</h3>
@@ -52,11 +56,6 @@
                         <h3>DINNER & DRINKS</h3>
                     </div>
                 </a>
-                <a href="https://sophiehomer.github.io/run-buddy/" class="run-buddy-img container-img">
-                    <div class="text-block">
-                        <h3>RUN BUDDY</h3>
-                    </div>
-                </a>
                  <a href="https://sophiehomer.github.io/Weather-Dashboard/" class="weather-dashboard-img container-img">
                     <div class="text-block ">
                         <h3>WEATHER DASHBOARD</h3>
@@ -65,11 +64,6 @@
                 <a href="https://sophiehomer.github.io/work-day-scheduler/" class="work-day-scheduler-img container-img">
                     <div class="text-block ">
                         <h3>WORK DAY SCHEDULER</h3>
-                    </div>
-                </a>
-                <a href="https://sophiehomer.github.io/Horiseon/" class="horiseon-img container-img">
-                    <div class="text-block">
-                        <h3>HORISEON</h3>
                     </div>
                 </a>
             </div>
